tests/golden/type_errors/map_merge_non_second.cd
merge({"a": 1}, [2]);
