tests/golden/type_errors/map_merge_non_second.err
Type error at 1:20: merge expects map as second argument, got [number]
  merge({"a": 1}, [2]);
                     ^
